infra/k8s/usage-mntr-serv-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usage-mntr-serv-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usage-mntr-serv
  template:
    metadata:
      labels:
        app: usage-mntr-serv
    spec:
      containers:
        - name: usage-mntr-serv
          image: us.gcr.io/photo-gallery-409812/usagemntrserv
          # image: itsmefrost/usagemntrserv
---
apiVersion: v1
kind: Service
metadata:
  name: usage-mntr-serv
spec:
  selector:
    app: usage-mntr-serv
  ports:
    - name: usage-mntr-serv
      protocol: TCP
      port: 5002
      targetPort: 5002
