infra/k8s/user-acc-mgmt-serv-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-acc-mgmt-serv-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-acc-mgmt-serv
  template:
    metadata:
      labels:
        app: user-acc-mgmt-serv
    spec:
      containers:
        - name: user-acc-mgmt-serv
          image: us.gcr.io/photo-gallery-409812/useraccmgmtserv
          # image: itsmefrost/useraccmgmtserv
---
apiVersion: v1
kind: Service
metadata:
  name: user-acc-mgmt-serv
spec:
  selector:
    app: user-acc-mgmt-serv
  ports:
    - name: user-acc-mgmt-serv
      protocol: TCP
      port: 5000
      targetPort: 5000
