infra/k8s/ingress-serv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-serv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: photo-gallery.com
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: user-acc-mgmt-serv
              port:
                number: 5000
        - path: /register
          pathType: ImplementationSpecific
          backend:
            service:
              name: user-acc-mgmt-serv
              port:
                number: 5000
        - path: /login
          pathType: ImplementationSpecific
          backend:
            service:
              name: user-acc-mgmt-serv
              port:
                number: 5000
